tests/checker/fail/literal_dispatch_kind_mismatch.can
describe = (Int) => String {
    Int -> (
        * "zero" => String { "zero" }
        * Int => String { "many" }
    )
}

Unit => Program {
    0.describe().print()
}
